[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-rtt-target = "0.1.3"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.10.1", features = [
    "rom-v2-intrinsics",
    "rom-func-cache",
    "rt",
    "critical-section-impl",
] }
rtt-target = "0.5.0"

[profile.dev]
opt-level = 1
lto = "thin"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
